# rline

./: CLAUDE.md  Cargo.toml  INSTALLING-MCP-SERVERS.md  LICENSE  README.md  SKILLS.md
.claude/commands/: ai-integration.md  architect.md  code-reviewer.md  gtk4-ui.md  test-writer.md
crates/rline-ai/: Cargo.toml
crates/rline-ai/src/: client.rs  error.rs  lib.rs  runtime.rs  types.rs
crates/rline-ai/src/agent/: context.rs  event.rs  loop.rs  mod.rs
crates/rline-ai/src/browser/: mod.rs  session.rs
crates/rline-ai/src/chat/: anthropic.rs  client.rs  mod.rs  stream.rs  types.rs
crates/rline-ai/src/mcp/: client.rs  config.rs  manager.rs  mod.rs  tool.rs  types.rs
crates/rline-ai/src/skills/: error.rs  frontmatter.rs  mod.rs
crates/rline-ai/src/tools/: ask_followup_question.rs  attempt_completion.rs  browser_action.rs  definitions.rs  execute_command.rs  list_code_definition_names.rs  list_files.rs  mod.rs  plan_mode_respond.rs  read_file.rs  replace_in_file.rs  search_files.rs  use_skill.rs  write_to_file.rs
crates/rline-ai/tests/: browser_smoke.rs
crates/rline-config/: Cargo.toml
crates/rline-config/src/: error.rs  keybindings.rs  lib.rs  paths.rs  settings.rs  syntax_theme.rs  vscode_import.rs  zed_import.rs
crates/rline-core/: Cargo.toml
crates/rline-core/src/: document.rs  error.rs  lib.rs  position.rs  search.rs
crates/rline-lint/: Cargo.toml
crates/rline-lint/src/: diagnostic.rs  error.rs  javascript.rs  lib.rs  provider.rs  python.rs  registry.rs  ruby.rs  rust.rs  settings.rs  util.rs
crates/rline-syntax/: Cargo.toml
crates/rline-syntax/src/: engine.rs  error.rs  languages.rs  lib.rs  scope_map.rs  span.rs
crates/rline-ui/: Cargo.toml
crates/rline-ui/src/: app.rs  error.rs  lib.rs  menu.rs  shortcuts.rs  shortcuts_dialog.rs  status_bar.rs  theming.rs  window.rs
crates/rline-ui/src/agent/: agent_panel.rs  history.rs  markdown.rs  message_widget.rs  mod.rs  permission.rs
crates/rline-ui/src/editor/: block_completion.rs  bracket_completion.rs  editor_pane.rs  find_bar.rs  inline_completion.rs  minimap.rs  mod.rs  settings_dialog.rs  split_container.rs  syntax_highlighter.rs  tab.rs
crates/rline-ui/src/file_browser/: browser_panel.rs  file_node.rs  file_tree.rs  mod.rs  open_buffer_item.rs
crates/rline-ui/src/git/: diff_tab.rs  git_panel.rs  git_status_row.rs  git_worker.rs  mod.rs
crates/rline-ui/src/lint/: format_action.rs  lint_worker.rs  mod.rs  problems_panel.rs
crates/rline-ui/src/search/: mod.rs  project_search.rs  quick_open.rs  search_worker.rs
crates/rline-ui/src/terminal/: mod.rs  terminal_pane.rs  terminal_tab.rs
src/: main.rs
