[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
gtk4 = { version = "0.10", features = ["v4_16"] }
sourceview5 = "0.10"
vte4 = "0.9"
glib = "0.21"
gio = "0.21"
ropey = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "6"
git2 = "0.20"
bytes = "1"
futures-core = "0.3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

[package]
name = "rline"
version = "0.1.0"
edition = "2021"

[dependencies]
rline-ui = { path = "crates/rline-ui" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
