[package]
name = "rline-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
futures-core = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
chromiumoxide = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
