[package]
name = "rline-syntax"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"

# Language grammars (optional, behind feature flags)
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
tree-sitter-bash = { version = "0.25", optional = true }
tree-sitter-html = { version = "0.23", optional = true }
tree-sitter-css = { version = "0.25", optional = true }
tree-sitter-md = { version = "0.5", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-xml = { version = "0.7", optional = true }
tree-sitter-haml = { version = "0.1", optional = true }

[features]
default = [
    "lang-rust",
    "lang-python",
    "lang-javascript",
    "lang-c",
    "lang-cpp",
    "lang-json",
    "lang-bash",
    "lang-html",
    "lang-css",
    "lang-markdown",
    "lang-ruby",
    "lang-yaml",
    "lang-xml",
    "lang-haml",
]
lang-rust = ["dep:tree-sitter-rust"]
lang-python = ["dep:tree-sitter-python"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-c = ["dep:tree-sitter-c"]
lang-cpp = ["dep:tree-sitter-cpp"]
lang-json = ["dep:tree-sitter-json"]
lang-bash = ["dep:tree-sitter-bash"]
lang-html = ["dep:tree-sitter-html"]
lang-css = ["dep:tree-sitter-css"]
lang-markdown = ["dep:tree-sitter-md"]
lang-ruby = ["dep:tree-sitter-ruby"]
lang-yaml = ["dep:tree-sitter-yaml"]
lang-xml = ["dep:tree-sitter-xml"]
lang-haml = ["dep:tree-sitter-haml"]
