[package]
name = "rline-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
rline-core = { path = "../rline-core" }
rline-config = { path = "../rline-config" }
rline-ai = { path = "../rline-ai" }
rline-syntax = { path = "../rline-syntax" }
rline-lint = { path = "../rline-lint" }
gtk4 = { workspace = true }
pango = "0.21"
sourceview5 = { workspace = true }
vte4 = { workspace = true }
glib = { workspace = true }
gio = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
git2 = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
